# LogiBot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  config.ts  index.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/src/controller/: gruber.ts  order.ts
backend/src/models/: candidate_deals.ts  chats.ts  order.ts
backend/src/routes/: api.ts
backend/src/types/: message.ts  suppliers.ts
backend/src/utils/: chatbot.ts
chatbot/: Dockerfile  pyproject.toml
chatbot/chatbot/: chat.py  mongo.py  proxy.py  server.py
database/: mongod.conf
database/init-scripts/: init.js
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/assets/styles/: base.css  global.css  main.css
frontend/src/components/: Navbar.vue  OrderForm.vue
frontend/src/presets/: IST.ts
frontend/src/router/: index.ts
frontend/src/store/: chatStore.ts  orderStore.ts
frontend/src/store/models/: chat.ts  order.ts
frontend/src/views/: Chat.vue  Chats.vue  Dashboard.vue  Orders.vue
